--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@ body {
 
 #blocoAgenda {
     background-color: rgb(204, 202, 202);
-    display: flex;
+    display: block;
     justify-content: center;
     font-family: 'Courier New', Courier, monospace;
     margin-top: 2%;
     width: 800px;
     height: 670px;
+    border: solid black 5px;
 }
 
 #cabeca {
@@ -22,7 +23,7 @@ body {
     background-color: rgb(63, 57, 57);
     width: 100%;
     height: 10%;
-    margin: 5px;
+    border-bottom: solid black 5px;
     justify-content: center;
     align-items: center;
 }
