--- a/style.css
+++ b/style.css
@@ -57,6 +57,13 @@ body {
     margin: 5px;
 }
 
-.estruturaTesk {
-    
+#listaTesks {
+    width: 100%;
+    height: 90%;
+    display: block;
+}
+
+#estruturaTesk {
+    width: 770px;
+    background-color: white;
 }
